--- a/TODO
+++ b/TODO
@@ -8,4 +8,4 @@ elecrud - GPLv3 - A C++/electron based multi-user CRUD operator generator.
     SLOC is the result of calling `sloc` in src/ (removes src/app/)
 
 * v0.0.2-21 (15 Mar. 2024 - ???) SLOC ?,???
-
+- (1) Upgrade src/app/ npm dependencies
