--- a/TODO
+++ b/TODO
@@ -8,6 +8,7 @@ elecrud - GPLv3 - A C++/electron based multi-user CRUD operator generator.
     SLOC is the result of calling `sloc` in src/ (removes src/app/)
 
 * v0.0.2-21 (15 Mar. 2024 - ???) SLOC ?,???
-- (3) Add a ProcessWatcher class skeleton
+- (4) Add row div to generated app to make content side by side
+- Add a ProcessWatcher class skeleton
 - Close eudcat ROADMAP section
 - Upgrade src/app/ npm dependencies
