--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+* v0.0.2-21 (15 Mar. 2024 - 06 Jun. 2024) SLOC 2,826
+- Implement ProcessWatcher::forkMessage to help understand fork thing
+- Improve ProcessWatcher fork() handling
+- ProcessWatcher now uses std::runtime_error
+- Fix the ProcessWatcher recursive loop memory error
+- Add row div to generated app to make content side by side
+- Add a ProcessWatcher class skeleton
+- Close eudcat ROADMAP section
+- Upgrade src/app/ npm dependencies
+
 * v0.0.2-20 (06 Feb. 2024 - 15 Mar. 2024) SLOC 2,585
 - Improve StartupOption API documentation
 - Add a bash completion script and the related install rule
