--- a/TODO
+++ b/TODO
@@ -8,4 +8,5 @@ elecrud - GPLv3 - A C++/electron based multi-user CRUD operator generator.
     SLOC is the result of calling `sloc` in src/ (removes src/app/)
 
 * v0.0.2-22 (06 Jun. 2024 - ???) SLOC ?,???
-- (1) Add a ProcessWatcher executable example
+- (2) Fix the unit test ProcessWatcher ls filename
+- Add a ProcessWatcher executable example
