--- a/TODO
+++ b/TODO
@@ -8,5 +8,6 @@ elecrud - GPLv3 - A C++/electron based multi-user CRUD operator generator.
     SLOC is the result of calling `sloc` in src/ (removes src/app/)
 
 * v0.0.2-22 (06 Jun. 2024 - ???) SLOC ?,???
-- (2) Fix the unit test ProcessWatcher ls filename
+- (3) Add args param to ProcessWatcher::fork_process
+- Fix the unit test ProcessWatcher ls filename
 - Add a ProcessWatcher executable example
