--- a/TODO
+++ b/TODO
@@ -8,6 +8,7 @@ elecrud - GPLv3 - A C++/electron based multi-user CRUD operator generator.
     SLOC is the result of calling `sloc` in src/ (removes src/app/)
 
 * v0.0.2-23 (07 Aug. 2024 - ???) SLOC ?,???
-- (3) Fix a typo in ProjectFile::dbug()
+- (4) Improve editor's main file documentation
+- Fix a typo in ProjectFile::dbug()
 - MainWindow open command line arg as project file
 - Editor's main handle file as argument
