--- a/TODO
+++ b/TODO
@@ -8,7 +8,8 @@ elecrud - GPLv3 - A C++/electron based multi-user CRUD operator generator.
     SLOC is the result of calling `sloc` in src/ (removes src/app/)
 
 * v0.0.2-23 (07 Aug. 2024 - ???) SLOC ?,???
-- (4) Improve editor's main file documentation
+- (5) Upgrade multiple src/app dependencies
+- Improve editor's main file documentation
 - Fix a typo in ProjectFile::dbug()
 - MainWindow open command line arg as project file
 - Editor's main handle file as argument
