--- a/TODO
+++ b/TODO
@@ -8,7 +8,8 @@ elecrud - GPLv3 - A C++/electron based multi-user CRUD operator generator.
     SLOC is the result of calling `sloc` in src/ (removes src/app/)
 
 * v0.0.2-23 (07 Aug. 2024 - ???) SLOC ?,???
-- (7) ProjectFile saves description
+- (8) eudcat tool prints project description from project file
+- ProjectFile saves description
 - Opening a file from CLI updates title
 - Upgrade multiple src/app dependencies
 - Improve editor's main file documentation
