Switch to revision 23
- eudcat tool prints project description from project file
- ProjectFile saves description
- Opening a file from CLI updates title
- Upgrade multiple src/app dependencies
- Improve editor's main file documentation
- Fix a typo in ProjectFile::dbug()
- MainWindow open command line arg as project file
- Editor's main handle file as argument

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+* v0.0.2-23 (07 Aug. 2024 - 02 Sep. 2024) SLOC 3,066
+- eudcat tool prints project description from project file
+- ProjectFile saves description
+- Opening a file from CLI updates title
+- Upgrade multiple src/app dependencies
+- Improve editor's main file documentation
+- Fix a typo in ProjectFile::dbug()
+- MainWindow open command line arg as project file
+- Editor's main handle file as argument
+
 * v0.0.2-22 (06 Jun. 2024 - 07 Aug. 2024) SLOC 2,955
 - Implement MainWindow::copyUiToProjectFile() and save editor fields to file
 - Add a status bar message when we save project file
