--- a/TODO
+++ b/TODO
@@ -8,4 +8,5 @@ elecrud - GPLv3 - A C++/electron based multi-user CRUD operator generator.
     SLOC is the result of calling `sloc` in src/ (removes src/app/)
 
 * v0.0.2-24 (02 Sep. 2024 - ???) SLOC ?,???
-- (1) Upgrade Projectfile doxygen documentation
+- (2) MainWindow handles project file description on load/save
+- Upgrade Projectfile doxygen documentation
