--- a/TODO
+++ b/TODO
@@ -8,7 +8,8 @@ elecrud - GPLv3 - A C++/electron based multi-user CRUD operator generator.
     SLOC is the result of calling `sloc` in src/ (removes src/app/)
 
 * v0.0.2-24 (02 Sep. 2024 - ???) SLOC ?,???
-- (6) Added basic NewCollectionDialog class
+- (7) Fixed the NewCollectionDialog segfault issue
+- Added basic NewCollectionDialog class
 - Fix Collection unit tests
 - Add a basic named Collection class with failing unit tests
 - Add a field list in collection editor pane
