--- a/TODO
+++ b/TODO
@@ -8,7 +8,8 @@ elecrud - GPLv3 - A C++/electron based multi-user CRUD operator generator.
     SLOC is the result of calling `sloc` in src/ (removes src/app/)
 
 * v0.0.2-25 (31 Oct. 2024 - ???) SLOC ?,???
-- (7) Newly added collection string added to associated FXlist widget
+- (8) Start to handle cllections list selection event
+- Newly added collection string added to associated FXlist widget
 - NewCollection dialog return trimmes string and newline char handle
 - Half an hour improving various classes API documentation
 - MainWindow::getNewCollectionString implementation
