--- a/TODO
+++ b/TODO
@@ -7,12 +7,5 @@ elecrud - GPLv3 - A C++/electron based multi-user CRUD operator generator.
     Create a new git tag and pull --tags for each revision commit
     SLOC is the result of calling `sloc` in src/ (removes src/app/)
 
-* v0.0.2-25 (31 Oct. 2024 - ???) SLOC ?,???
-- (8) Start to handle cllections list selection event
-- Newly added collection string added to associated FXlist widget
-- NewCollection dialog return trimmes string and newline char handle
-- Half an hour improving various classes API documentation
-- MainWindow::getNewCollectionString implementation
-- Add NewCollectionDialog name and description getters
-- Add NewCollectionDialog text fields
-- NewCollectionDialog buttons events work
+* v0.0.2-26 (18 Noc. 2024 - ???) SLOC ?,???
+
