--- a/TODO
+++ b/TODO
@@ -8,4 +8,5 @@ elecrud - GPLv3 - A C++/electron based multi-user CRUD operator generator.
     SLOC is the result of calling `sloc` in src/ (removes src/app/)
 
 * v0.0.2-26 (18 Noc. 2024 - ???) SLOC ?,???
-- (1) Collection list event handling get item index
+- (2) Add collection description field, getter, setter and tests
+- Collection list event handling get item index
