--- a/TODO
+++ b/TODO
@@ -8,6 +8,7 @@ elecrud - GPLv3 - A C++/electron based multi-user CRUD operator generator.
     SLOC is the result of calling `sloc` in src/ (removes src/app/)
 
 * v0.0.2-26 (18 Noc. 2024 - ???) SLOC ?,???
-- (3) Started to write first CollectionList unit tests
+- (4) Add Collection copy ctor to make call to make_shared possible
+- Started to write first CollectionList unit tests
 - Add collection description field, getter, setter and tests
 - Collection list event handling get item index
