--- a/TODO
+++ b/TODO
@@ -7,12 +7,5 @@ elecrud - GPLv3 - A C++/electron based multi-user CRUD operator generator.
     Create a new git tag and pull --tags for each revision commit
     SLOC is the result of calling `sloc` in src/ (removes src/app/)
 
-* v0.0.2-26 (18 Noc. 2024 - ???) SLOC ?,???
-- (8) Fix the NewCollecionDialog segault on UI access
-- MainWindow starts to use CollectionList
-- Implement CollectionList::isNameInUse to fix last failing test
-- One more CollectionList test to be fixed
-- Add Collection copy ctor to make call to make_shared possible
-- Started to write first CollectionList unit tests
-- Add collection description field, getter, setter and tests
-- Collection list event handling get item index
+* v0.0.2-27 (21 Nov. 2024 - ???) SLOC ?,???
+
