--- a/TODO
+++ b/TODO
@@ -8,7 +8,8 @@ elecrud - GPLv3 - A C++/electron based multi-user CRUD operator generator.
     SLOC is the result of calling `sloc` in src/ (removes src/app/)
 
 * v0.0.2-27 (21 Nov. 2024 - ???) SLOC ?,???
-- (4) Basic ftInt class and unit tests
+- (5) Add a FieldType factoey skeleton
+- Basic ftInt class and unit tests
 - Add basic FieldType abstract class header
 - Add unit test and class for Collection's Field
 - Collection one liner impl. moves from MainWindow to Collection class
