--- a/TODO
+++ b/TODO
@@ -8,4 +8,5 @@ elecrud - GPLv3 - A C++/electron based multi-user CRUD operator generator.
     SLOC is the result of calling `sloc` in src/ (removes src/app/)
 
 * v0.0.2-28 (27 Nov. 2024 - ???) SLOC ?,???
-- (1) ftString implementation
+- (2) New field button deactivated by default and basic dialog
+- ftString implementation
