--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+* v0.0.2-28 (27 Nov. 2024 - 02 Dec. 2024) SLOC 4,345
+- CollectionList::at implementation
+- Handle collection list deselection message and disable new field button
+- Feed NewFieldDialog types combo box with FieldTypeFactory keys
+- Add collection name to NewFieldDialog title
+- Correctly set Collection list item data
+- Add first NewFieldDialog unit test
+- New field button deactivated by default and basic dialog
+- ftString implementation
+
 * v0.0.2-27 (21 Nov. 2024 - 27 Nov. 2024) SLOC 3,963
 - Finish ftInt value test and implementation
 - FieldTypeFactory::getKeys implementation and unit test
