Close a collection handling ROADMAP section and bump version to 0.0.3

--- a/TODO
+++ b/TODO
@@ -7,5 +7,6 @@ elecrud - GPLv3 - A C++/electron based multi-user CRUD operator generator.
     Create a new git tag and pull --tags for each revision commit
     SLOC is the result of calling `sloc` in src/ (removes src/app/)
 
-* v0.0.2-29 (02 Dec. 2024 - ???) SLOC ?,???
-- (1) Remove CollectionList raw pointer push_back function
+* v0.0.3-29 (02 Dec. 2024 - ???) SLOC ?,???
+- (2) Close a collection handling ROADMAP section and bump version to 0.0.3
+- Remove CollectionList raw pointer push_back function
