--- a/TODO
+++ b/TODO
@@ -8,7 +8,8 @@ elecrud - GPLv3 - A C++/electron based multi-user CRUD operator generator.
     SLOC is the result of calling `sloc` in src/ (removes src/app/)
 
 * v0.0.3-29 (02 Dec. 2024 - ???) SLOC ?,???
-- (6) Add a collection field in UI works
+- (7) Add unit tests and empty funcs for unique fieldName impl.
+- Add a collection field in UI works
 - Slightly improve NewFieldDialog API documentation
 - Implement Field::getOneLiner to fix unit tests
 - Add Field description and new failing tests
