--- a/TODO
+++ b/TODO
@@ -8,7 +8,8 @@ elecrud - GPLv3 - A C++/electron based multi-user CRUD operator generator.
     SLOC is the result of calling `sloc` in src/ (removes src/app/)
 
 * v0.0.3-30 (05 Dec. 2024 - ???) SLOC ?,???
-- (4) FieldTypeFactory throw an invalid argument exc. if invalid key
+- (5) Fix a remaining test fail when Collection description is empty
+- FieldTypeFactory throw an invalid argument exc. if invalid key
 - Slightly improve FieldTypeFactory's API documentation
 - Selecting a collection change associated fields in list
 - Can't add field with duplicated name
