--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+* v0.0.3-30 (05 Dec. 2024 - 18 Dec. 2024) SLOC 4,692
+- Add to-be-fixed Field tests for future save and load implementation
+- Close a ProjectFile-related ROADMAP section
+- Add a file comment block to a couple of headers
+- Fix a remaining test fail when Collection description is empty
+- FieldTypeFactory throw an invalid argument exc. if invalid key
+- Slightly improve FieldTypeFactory's API documentation
+- Selecting a collection change associated fields in list
+- Can't add field with duplicated name
+
 * v0.0.3-29 (02 Dec. 2024 - 05 Dec. 2024) SLOC 4,555
 - Implement Collection::isFieldNameInUse function
 - Add unit tests and empty funcs for unique fieldName impl.
