--- a/TODO
+++ b/TODO
@@ -8,7 +8,8 @@ elecrud - GPLv3 - A C++/electron based multi-user CRUD operator generator.
     SLOC is the result of calling `sloc` in src/ (removes src/app/)
 
 * v0.0.3-31 (18 Dec. 2024 - ???) SLOC ?,???
-- (4) Fix multiple undocumentated members
+- (5) Implement Field load and save functions parts for field type
+- Fix multiple undocumentated members
 - New failing tests on the Field type pointer
 - Correctly use stream direction and uchar buffer to fix Field tests
 - Start to implement Field save/load on memory stream
