--- a/TODO
+++ b/TODO
@@ -8,7 +8,8 @@ elecrud - GPLv3 - A C++/electron based multi-user CRUD operator generator.
     SLOC is the result of calling `sloc` in src/ (removes src/app/)
 
 * v0.0.3-31 (18 Dec. 2024 - ???) SLOC ?,???
-- (6) Improve ftInt members documentation
+- (7) Add failing tests to prepare Collection::save implementation
+- Improve ftInt members documentation
 - Implement Field load and save functions parts for field type
 - Fix multiple undocumentated members
 - New failing tests on the Field type pointer
