--- a/TODO
+++ b/TODO
@@ -8,7 +8,8 @@ elecrud - GPLv3 - A C++/electron based multi-user CRUD operator generator.
     SLOC is the result of calling `sloc` in src/ (removes src/app/)
 
 * v0.0.3-31 (18 Dec. 2024 - ???) SLOC ?,???
-- (7) Add failing tests to prepare Collection::save implementation
+- (8) Change Collection::appendItem return type to allow chain call
+- Add failing tests to prepare Collection::save implementation
 - Improve ftInt members documentation
 - Implement Field load and save functions parts for field type
 - Fix multiple undocumentated members
