--- a/TODO
+++ b/TODO
@@ -8,4 +8,4 @@ elecrud - GPLv3 - A C++/electron based multi-user CRUD operator generator.
     SLOC is the result of calling `sloc` in src/ (removes src/app/)
 
 * v0.0.3-32 (24 Dec. 2024 - ???) SLOC ?,???
-
+- (1) Add a special throw case in FieldTypeFactory::newInstance for empty name
