Slightly improve API documentation

--- a/TODO
+++ b/TODO
@@ -8,5 +8,6 @@ elecrud - GPLv3 - A C++/electron based multi-user CRUD operator generator.
     SLOC is the result of calling `sloc` in src/ (removes src/app/)
 
 * v0.0.3-32 (24 Dec. 2024 - ???) SLOC ?,???
-- (2) Added some FX* macros to EXCLUDE_SYMBOLS trying to fix NewFieldDialog issue
+- (3) Slightly improve API documentation
+- Added some FX* macros to EXCLUDE_SYMBOLS trying to fix NewFieldDialog issue
 - Add a special throw case in FieldTypeFactory::newInstance for empty name
