--- a/TODO
+++ b/TODO
@@ -8,7 +8,8 @@ elecrud - GPLv3 - A C++/electron based multi-user CRUD operator generator.
     SLOC is the result of calling `sloc` in src/ (removes src/app/)
 
 * v0.0.3-32 (24 Dec. 2024 - ???) SLOC ?,???
-- (6) Update many dependencies in to-be-generated app.
+- (7) Improve Field class API documentation
+- Update many dependencies in to-be-generated app.
 - ProjectFile has now a mutable CollectionList member
 - yargs-parser and other src/app dependencies update
 - Slightly improve API documentation
