--- a/TODO
+++ b/TODO
@@ -8,4 +8,4 @@ elecrud - GPLv3 - A C++/electron based multi-user CRUD operator generator.
     SLOC is the result of calling `sloc` in src/ (removes src/app/) 
 
 * v0.0.3-33 (27 Jan. 2025 - ???) SLOC ?,???
-
+- (1) ProjectFile save CollectionList members
