Add a doxygen file block to a couple of files

--- a/TODO
+++ b/TODO
@@ -8,5 +8,6 @@ elecrud - GPLv3 - A C++/electron based multi-user CRUD operator generator.
     SLOC is the result of calling `sloc` in src/ (removes src/app/) 
 
 * v0.0.3-33 (27 Jan. 2025 - ???) SLOC ?,???
-- (2) Add ftString value setter and getter
+- (3) Add a doxygen file block to a couple of files
+- Add ftString value setter and getter
 - ProjectFile save CollectionList members
